trunk/Archive2/b0/dac4e3df2ad554/output
+ clang++ -std=c++11 -O0 -Wall main.cpp
main.cpp:72:17: error: type 'int_arr' (aka 'my_array<int>') does not provide a subscript operator
            if(v[j] >= 0) vchar += v[j];
               ~^~
main.cpp:72:37: error: type 'int_arr' (aka 'my_array<int>') does not provide a subscript operator
            if(v[j] >= 0) vchar += v[j];
                                   ~^~
2 errors generated.
